z-index fix

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -95,9 +95,9 @@ img.icon
 
 .snake-right
   &.snake-head
-    animation: move-right 200ms ease-out forwards
+    animation: move-right 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
     & > .faceWrapper
-      animation: head-right 200ms ease-out forwards
+      animation: head-right 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
   &.snake-tail
     animation: move-tail-right 200ms ease-out forwards
 @keyframes move-right
@@ -127,14 +127,14 @@ img.icon
   transform-origin: 12px
   top: 1px
   &.snake-head
-    animation: move-down 200ms ease-out forwards
+    animation: move-down 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
     & > .faceWrapper
-      animation: head-down 200ms ease-out forwards
+      animation: head-down 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
   &.snake-tail
     width: 21px
     margin-left: 2px
     margin-right: 2px
-    animation: move-tail-down 200ms ease-out forwards
+    animation: move-tail-down 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
 @keyframes move-down
   0%
     width: 30px
@@ -161,11 +161,11 @@ img.icon
   transform: rotate(180deg)
   transform-origin: 12px
   &.snake-head
-    animation: move-left 200ms ease-out forwards
+    animation: move-left 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
     & > .faceWrapper
-      animation: head-left 200ms ease-out forwards
+      animation: head-left 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
   &.snake-tail
-    animation: move-tail-left 200ms ease-out forwards
+    animation: move-tail-left 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
 @keyframes move-left
   0%
     width: 30px
@@ -192,14 +192,14 @@ img.icon
   transform-origin: 12px
   top: -1px
   &.snake-head
-    animation: move-up 200ms ease-out forwards
+    animation: move-up 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
     & > .faceWrapper
-      animation: head-up 200ms ease-out forwards
+      animation: head-up 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
   &.snake-tail
     width: 21px
     margin-left: 2px
     margin-right: 2px
-    animation: move-tail-up 200ms ease-out forwards
+    animation: move-tail-up 200ms cubic-bezier(1,-0.48, 0.06, 1.13) forwards
 @keyframes move-up
   0%
     width: 30px
